# SCRAPEGOAT

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
gfwldata/config/: deck.py  discord.py  replay.py  replay_parser.py  settings.py  worksheet.py
gfwldata/data/sheets/: gfwl-s1.xlsx  gfwl-s2.xlsx  gfwl-s3.xlsx  gfwl-s4.xlsx  gfwl-s5.xlsx
gfwldata/data/tables/: jobs.csv  league_matches.csv
gfwldata/extractors/: discord_league_data_extractor.py  excel_league_data_extractor.py  fl_deck_extractor.py  replay_extractor.py
gfwldata/loaders/: league_data_loader.py
gfwldata/models/deck_classifier/: label_encoder.joblib  tfidf.joblib
gfwldata/transformers/: deck_transformer.py  discord_league_data_transformer.py  excel_league_data_transformer.py  replay_parser.py
gfwldata/utils/: db.py  league_data.py  logger.py  matchup_week_locator.py  models.py  replay_url_helpers.py  s3.py
notebooks/: README.md  utils.py
notebooks/clean_tables/: README.md  main.ipynb
notebooks/deck_model/: README.md  main.ipynb
notebooks/deck_model_demo/: README.md  main.ipynb
notebooks/deck_model_demo/data/: failed_predictions.csv
notebooks/gfwl_analysis/: README.md
scripts/: init_db.py  run_discord_league_data_pipeline.py  run_excel_league_data_pipeline.py  run_replay_parser_pipeline.py  run_scrape_deck_pipeline.py  run_scrape_replay_pipeline.py
scripts/dev/: save_tables_as_csv.py  sync_jobs_from_s3.py
