[project]
name = "SCRAPEGOAT"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=14.1.0",
    "aiometer>=0.5.0",
    "aiosqlite>=0.21.0",
    "boto3>=1.37.1",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "playwright>=1.51.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.39",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbconvert>=7.16.6",
    "plotnine>=0.14.5",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "pytest>=8.3.5",
    "ruff>=0.11.1",
    "scikit-learn==1.6",
    "xgboost>=3.0.0",
]

[tool.uv]
cache-dir=".cache"

[tool.ruff]
exclude = ["notebooks"]
